--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 :root {
   --primary-color: blue;
@@ -6,7 +7,7 @@
 body {
   background: #f2f2f2;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: 'Heebo', sans-serif;
 }
 
 .navbar {
@@ -19,6 +20,7 @@ body {
   font-weight: bold;
   color: black;
   font-size: 1.2em;
+  letter-spacing: -0.09em;
 }
 
 .navbar .logo span {
@@ -85,11 +87,79 @@ section {
   border-radius: .7em;
 }
 
+ul.features-list {
+  margin: 0;
+  padding-left: .1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-columns: (minmax(19rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+}
+
+ul.features-list li {
+  font-size: 1.1em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  position: relative;
+}
+
+ul.features-list li:before {
+  content: '';
+  left: -2em;
+}
+
+iframe {
+  width: 100%;
+  height: 300px;
+}
+
 nav.menu-btn {
   display: block;
 }
 
 nav {
   position: fixed;
+  z-index: 999;
+  width: 66%;
+  top: 0;
+  background: #3851a1;
+  height: 100vh;
+  padding: 1em;
+}
+
+nav ul.primary-nav {
+  margin-top: 5em;
+}
+
+nav li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: .5em;
+  font-size: 1.3em;
+  text-align: right;
+}
+
+nav li a:hover {
+  font-weight: bold;
+}
+
+.mobile-meun-exit {
+  float: right;
+  margin: .5em;
+  cursor: pointer;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  button:hover {
+    color: palegreen;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile-menu, mobile-menu-exit {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
