--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,8 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 
 :root {
     --primary-color: blue;
@@ -8,21 +11,25 @@
 body {
     background: #f2f2f2;
     margin: 0;
-    font-family: 'Poppins';
+    font-family: 'Heebo', sans-serif;
 }
 
 .navbar {
     background: white;
     padding: 1em;
+   
 
     .logo {
         text-decoration: none;
         font-weight: bold;
         color: black;
-        font-size: 1.2em;
+        font-size: 2em;
+        letter-spacing: 1em;
+        
 
         span {
             color: var(--primary-color);
+            letter-spacing: -0.09em;
         }
     }
 
@@ -57,8 +64,14 @@ section {
 
 .hero {
     text-align: center;
-
 }
+
+.shopphoto {
+    width: 70%;
+    height: 3em;
+}
+
+
 
 .left-col {
 
@@ -93,11 +106,156 @@ section {
 
 }
 
-nav.menu-btn {
-    display: block;
 
+
+ul.features-list {
+    margin: 0;
+    padding-left: .1em;
+    display: flex;
+    grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+
+    li {
+        font-size: 1.1em;
+        margin-bottom: 1em;
+        margin-left: 2em;
+        position: relative;
+
+        &:before {
+            content: '';
+            left: -2em;
+        }
+    }
 }
+
+iframe {
+    width: 100%;
+    height: 300px;
+}
+
+
 
 nav {
     position: fixed;
+    z-index: 999;
+    width: 66%;
+    top: 0;
+    background: rgb(56, 81, 161);
+    height: 100vh;
+    padding: 1em;
+
+    ul.primary-nav {
+        margin-top: 5em;
+    }
+
+    li {
+
+        a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: .5em;
+            font-size: 1.3em;
+            text-align: right;
+
+            &:hover {
+                font-weight: bold;
+            }
+        }
+    }
+
+}
+
+.grid {
+    display: grid;
+    padding: 16px;
+    gap: 16px;
+    grid-template-columns:
+      repeat(
+        auto-fill,
+        minmax(min(300px, 100%), 1fr)
+      );
+}
+
+
+//To be implemented Nav Icon 
+
+// $bg : #74F3C5;
+// $menu-color: black;
+// $snappy : cubic-bezier(0.694,  0.048, 0.335, 1.000);
+
+
+// .menu-container {
+//   @include align();
+//   .bars {
+//     width: 120px;
+//     height: 70px;
+//     position: relative;
+//     transition: transform 0.3s $snappy;
+//     border: 1px solid white;
+//     span {
+//       display: block;
+//       width: 100%;
+//       height: 10px;
+//       background-color: $menu-color;
+//       margin-top: 20px;
+//       &:first-child {
+//         margin-top: 0;
+//         transform: scaleX(1);
+//         transition: transform 0.2s $snappy;
+//         transition-delay: 0.4s;
+//       }
+//       &:nth-child(3) {
+//         width: 65%;
+//         transition: width 0.2s $snappy;
+//         transition-delay: 0.4s;
+//       }
+//     }
+//     .other-bar {
+//       width: 10px;
+//       height: 0;
+//       background-color: $menu-color;
+//       position: absolute;
+//       top: -23px;
+//       left: 50%;
+//       margin-left: -5px;
+//       transition: height 0.4s $snappy;
+//       z-index: 10;
+//     }
+//   }
+//   &.is-menu-open {
+//     .bars {
+//       transform: rotate(45deg);
+//       transition-delay: 0.4s;
+//       span {
+//         &:first-child {
+//           transform: scaleX(0);
+//           transition: transform 0.2s $snappy;
+//         }
+//         &:nth-child(3) {
+//           width: 0;
+//           transition: width 0.2s $snappy;
+//         }
+//       }
+//       .other-bar {
+//         height: 120px;
+//         transition: height 0.2s $snappy;
+//         transition-delay: 0.3s;
+//       }
+//     }
+//   }
+// }
+
+//avoid setting hover styles on mobile devices
+@media (hover: hover) and (pointer: fine) {
+    button:hover{
+        color: palegreen;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+    .mobile-menu, mobile-menu-exit {
+        display: none;
+    }
+
 }
