--- a/styles/main.css
+++ b/styles/main.css
@@ -1,30 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 :root {
-  --primary-color: blue;
+  --primary-color: #74b9ff;
 }
 
 body {
-  background: #f2f2f2;
+  background-color: white;
   margin: 0;
+  padding: 0;
   font-family: 'Heebo', sans-serif;
-}
-
-.navbar {
-  background: white;
-  padding: 1em;
+ 
 }
 
 .navbar .logo {
+  position: fixed;
   text-decoration: none;
   font-weight: bold;
   color: black;
-  font-size: 1.2em;
-  letter-spacing: -0.09em;
+  font-size: 1.5em;
+  letter-spacing: -0.06em;
+  
 }
 
 .navbar .logo span {
   color: var(--primary-color);
+  letter-spacing: -0.06em;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 }
 
 .navbar nav {
@@ -51,40 +51,76 @@ ul {
 }
 
 section {
-  padding: 5em 2em;
+  padding: 3em 2em;
 }
 
 .hero {
   text-align: center;
+  background-image: url("../images/shot7.jpg");
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  background-color: white;
+
+
 }
 
 .left-col .subhead {
+  padding-top: .1em;
   text-transform: uppercase;
   font-weight: bold;
-  color: black;
+  color: rgb(255, 255, 255);
   letter-spacing: .4em;
   font-size: 1.1em;
 }
 
 .left-col h1 {
   font-size: 2.5em;
-  line-height: 1.3em;
+  color:rgb(255, 255, 255);
+  line-height: 1em;
+  padding-bottom: .75em;
 }
 
 .left-col .subsubhead {
   text-transform: uppercase;
   font-weight: bold;
-  color: black;
+  color: rgb(255, 255, 255);
   letter-spacing: .3em;
   line-height: 6em;
 }
 
 .primary-cta {
-  background: skyblue;
+  
+  background: #d63031;
   color: white;
   text-decoration: none;
   padding: .6em 1.3em;
   border-radius: .7em;
+}
+
+.primary-cta:hover {
+  font-weight: bold;
+  background: #d30b0b;
+}
+
+.secondary-cta {
+  background: #d63031;
+  color: white;
+  text-decoration: none;
+  padding: .6em 3.8em;
+  border-radius: .7em;
+}
+
+.secondary-cta:hover {
+  font-weight: bold;
+  background: #d30b0b;
+}
+
+.features-section {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 4em 3em;
 }
 
 ul.features-list {
@@ -109,47 +145,16 @@ ul.features-list li:before {
   left: -2em;
 }
 
+.map-section {
+  padding: 0em 0em;
+}
+
 iframe {
+  padding-top: 0.5em;
   width: 100%;
-  height: 300px;
+  height: 400px;
 }
 
-nav.menu-btn {
-  display: block;
-}
-
-nav {
-  position: fixed;
-  z-index: 999;
-  width: 66%;
-  top: 0;
-  background: #3851a1;
-  height: 100vh;
-  padding: 1em;
-}
-
-nav ul.primary-nav {
-  margin-top: 5em;
-}
-
-nav li a {
-  color: white;
-  text-decoration: none;
-  display: block;
-  padding: .5em;
-  font-size: 1.3em;
-  text-align: right;
-}
-
-nav li a:hover {
-  font-weight: bold;
-}
-
-.mobile-meun-exit {
-  float: right;
-  margin: .5em;
-  cursor: pointer;
-}
 
 @media (hover: hover) and (pointer: fine) {
   button:hover {
@@ -158,8 +163,7 @@ nav li a:hover {
 }
 
 @media only screen and (min-width: 768px) {
-  .mobile-menu, mobile-menu-exit {
-    display: none;
-  }
+
 }
+
 /*# sourceMappingURL=main.css.map */
