--- a/styles/main.css
+++ b/styles/main.css
@@ -65,21 +65,53 @@ section {
 
 
 }
+.animated, .line {
+  width: 100%;
+  height: 90px;
+} 
 
-.left-col .subhead {
-  padding-top: .1em;
+.animated {
+
+  position: absolute;
+  top: 17%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  overflow: hidden;
+
+}
+
+.line {
+  position: relative;
+  bottom: 0%;
   text-transform: uppercase;
+  text-align: center;
+  font-size: 1em;
   font-weight: bold;
-  color: rgb(255, 255, 255);
-  letter-spacing: .4em;
-  font-size: 1.1em;
+  color: white;
+  letter-spacing: .3em;
+  text-shadow: 0 0 1px black, 0 0 1px black;
+}
+
+.line { animation: slidev linear 14s infinite; }
+
+@keyframes slidev {
+ 0% { bottom: 0%; }
+ 30% { bottom: 0%; }
+ 33% { bottom: 100%; }
+ 63% { bottom: 100%; }
+ 66% { bottom: 200%; }
+ 97% { bottom: 200%; }
+ 100% { bottom: 0%; }
+
 }
 
 .left-col h1 {
   font-size: 2.5em;
   color:rgb(255, 255, 255);
-  line-height: 1em;
-  padding-bottom: .75em;
+  line-height: 1.5em;
+  padding-bottom: .2em;
+  padding-top: .4em;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 }
 
 .left-col .subsubhead {
@@ -87,7 +119,8 @@ section {
   font-weight: bold;
   color: rgb(255, 255, 255);
   letter-spacing: .3em;
-  line-height: 6em;
+  line-height: 4.5em;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
 }
 
 .primary-cta {
@@ -108,7 +141,7 @@ section {
   background: #d63031;
   color: white;
   text-decoration: none;
-  padding: .6em 3.8em;
+  padding: .5em 4.15em;
   border-radius: .7em;
 }
 
