--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,222 @@
 @import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+
 :root {
-  --primary-color: #74b9ff;
+  --primary-color:#0C1110;
 }
+
+* {
+  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  
+ 
+}
+
+/* Navbar BEGIN */
+
+.navbar {
+  background-color: var(--primary-color);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+
+.navbar__container {
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+
+.logo-image img{
+  width: 20px;
+  height: 60px;
+  overflow: hidden;
+  margin: 10px 0px 0px 23px;
+}
+
+#navbar__logotext {
+
+  background-image: linear-gradient(to top, #c7c7c7 0%, #d62424 90%);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  display: none;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2.35rem;
+  padding-left: 0px;
+}
+
+.navbar__menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar__item {
+  height: 80px;
+}
+
+.navbar__links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 125px;
+  text-decoration: none;
+  height: 100%;
+  transition: all 0.3s ease;
+}
+
+.navbar__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  width: 100%;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4);
+  color: #fff;
+  transition: all 0.3s ease;
+}
+
+.navbar__links:hover {
+  color: #9518fc;
+  transition: all 0.3s ease;
+}
+
+
+
+@media screen and (max-width: 960px) {
+  .navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0;
+  }
+
+  .navbar__menu {
+    display: grid;
+    grid-template-columns: auto;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    top: -1000px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: -1;
+  }
+
+  .navbar__menu.active {
+    background: #131313;
+    top: 100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 99;
+    height: 60vh;
+    font-size: 1.6rem;
+  }
+
+  .navbar__toggle .bar {
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background: #fff;
+  }
+
+  .navbar__item {
+    width: 100%;
+  }
+
+  .navbar__links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
+  }
+
+  .navbar__btn {
+    padding-bottom: 2rem;
+  }
+
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 80px;
+    margin: 0;
+  }
+
+  #mobile-menu {
+    position: absolute;
+    top: 20%;
+    right: 5%;
+    transform: translate(5%, 20%);
+  }
+
+  .navbar__toggle .bar {
+    display: block;
+    cursor: pointer;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  #navbar__logotext {
+    display: flex;
+  }
+
+}
+
+/* Navbar stuff END */
+
+
 
 body {
   background-color: white;
@@ -9,35 +224,6 @@ body {
   padding: 0;
   font-family: 'Heebo', sans-serif;
  
-}
-
-.navbar .logo {
-  position: fixed;
-  text-decoration: none;
-  font-weight: bold;
-  color: black;
-  font-size: 1.5em;
-  letter-spacing: -0.06em;
-  
-}
-
-.navbar .logo span {
-  color: var(--primary-color);
-  letter-spacing: -0.06em;
-  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-}
-
-.navbar nav {
-  display: none;
-}
-
-.navbar .container {
-  padding: flex;
-  place-content: space-between;
-}
-
-.navbar .mobile-menu {
-  cursor: pointer;
 }
 
 a {
@@ -52,32 +238,39 @@ ul {
 
 section {
   padding: 3em 2em;
+  
 }
 
 .hero {
   text-align: center;
-  background-image: url("../images/shot7.jpg");
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background: url("../images/shot1.jpg");
   background-size: 100%;
-  background-color: white;
-
-
+  background-repeat: no-repeat;
+  background-color: var(--primary-color);
+  filter: brightness(100%);
+  height: 61vh;
 }
-.animated, .line {
+
+.hero h1 {
+  font-size: 2.5em;
+  color: white;
+  opacity: .9;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+}
+
+
+/* Animated Lines START */
+/* .animated, .line {
   width: 100%;
   height: 90px;
 } 
 
 .animated {
-
   position: absolute;
   top: 17%;
   left: 50%;
   transform: translate(-50%,-50%);
   overflow: hidden;
-
 }
 
 .line {
@@ -103,77 +296,63 @@ section {
  97% { bottom: 200%; }
  100% { bottom: 0%; }
 
+} */
+/* Animated Lines END*/
+
+/* CTA section START */
+
+.cta-section {
+  text-align: center;
+  background-color: var(--primary-color);
+  padding: 5.2em;
 }
 
-.left-col h1 {
-  font-size: 2.5em;
-  color:rgb(255, 255, 255);
-  line-height: 1.5em;
-  padding-bottom: .2em;
-  padding-top: .4em;
-  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-}
-
-.left-col .subsubhead {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: rgb(255, 255, 255);
-  letter-spacing: .3em;
-  line-height: 4.5em;
-  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
-}
-
-.primary-cta {
-  
-  background: #d63031;
+.direction-cta {
+  background: #221212;
   color: white;
   text-decoration: none;
   padding: .6em 1.3em;
   border-radius: .7em;
+  
 }
 
-.primary-cta:hover {
+.direction-cta:hover {
   font-weight: bold;
   background: #d30b0b;
 }
 
-.secondary-cta {
-  background: #d63031;
+.appointment-cta {
+  background: #221212;
   color: white;
   text-decoration: none;
   padding: .5em 4.15em;
   border-radius: .7em;
 }
 
-.secondary-cta:hover {
+.appointment-cta:hover {
   font-weight: bold;
   background: #d30b0b;
 }
+/* CTA section END */
 
 .features-section {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 4em 3em;
-}
-
-ul.features-list {
+  
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("../images/clippers.jpg");
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: 100%;
   margin: 0;
-  padding-left: .1em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-grid-columns: (minmax(19rem, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
+      
 }
 
-ul.features-list li {
+.features-section li {
+  color: white;
   font-size: 1.1em;
-  margin-bottom: 1em;
-  margin-left: 2em;
-  position: relative;
+  margin-bottom: .2em;
+  filter: none;
+  opacity: 1;
 }
-
-ul.features-list li:before {
+ul.features-section li:before {
   content: '';
   left: -2em;
 }
@@ -183,9 +362,10 @@ ul.features-list li:before {
 }
 
 iframe {
-  padding-top: 0.5em;
+  padding: 0.4em 0.3em 0.4em 0.3em;
   width: 100%;
   height: 400px;
+  background-color: var(--primary-color);
 }
 
 
@@ -194,9 +374,3 @@ iframe {
     color: palegreen;
   }
 }
-
-@media only screen and (min-width: 768px) {
-
-}
-
-/*# sourceMappingURL=main.css.map */
