--- a/styles/main.css
+++ b/styles/main.css
@@ -68,11 +68,12 @@ body {
 
 #navbar__logotext {
   font-family: 'Lobster', cursive;
-  color: black;
+  color: white;
   display: none;
   cursor: pointer;
   text-decoration: none;
   font-size: 2.35rem;
+  line-height: 210%;
  
 }
 
@@ -237,9 +238,6 @@ ul {
   padding: 0;
 }
 
-section {
-  padding: 3em 2em;
-}
 
 .hero {
   text-align: center;
@@ -271,6 +269,7 @@ section {
 
 .cta-section {
   text-align: center;
+  margin-top: 2.7rem;
 }
 
 .direction-cta {
@@ -316,6 +315,7 @@ section {
   margin: 2.7em 0em 0em 0em;
   padding: 2.3em;
   align-items: center;
+  justify-content: center;
       
 }
 
@@ -323,6 +323,7 @@ section {
   color: white;
   font-size: 1em;
   margin-bottom: .2em;
+  text-align: left;
   filter: none;
   opacity: 1;
   list-style: inside;
@@ -445,10 +446,11 @@ iframe {
   }
 
   .logo-container {
-    border-style: solid;
-    flex-direction: right;
-    justify-content: start;
+    display: flex;
+
   }
+
+  
 
 }
 
@@ -484,16 +486,16 @@ iframe {
 
   .cta-section {
     padding: 0;
-    margin: 6rem 0em 2rem 5em;
+    margin: 7rem 0em 2rem 7em;
   }
 
   .cta-buttons { 
-   padding: 1.2em 0em 0em .1em;
+   padding: 2em 0em 0em .1em;
    text-align: left;
   }
 
   .direction-cta {
-    font-size: 1em;
+    font-size: 1.07em;
     padding: .4em 1.7em;
     color: white;
     background: var(--wood);
@@ -522,28 +524,28 @@ iframe {
 
 
   #image-one {
-    width: 12em;
+    width: 18%;
     height: 100%;
     border-radius: 4px;
-    margin: 3em 1em 0em .3em;
+    margin: 3em 1em 0em 0em;
   }
   #image-two {
-    width: 20em;
+    width: 28%;
     height: 100%;
     border-radius: 4px;
     margin: 0em 0em 0em 0em;
   }
   #image-three {
-    width: 10em;
+    width: 19%;
     height: 100%;
     border-radius: 4px;
     margin: 9em 1em 0em 1em;
   }
   #image-four {
-    width: 10em;
+    width: 25%;
     height: 100%;
     border-radius: 4px;
-    margin: 4em .3em 0em 0em;
+    margin: 4em 0em 0em 0em;
   }
 
   .button {
@@ -563,6 +565,8 @@ iframe {
 
   .about {
     color: black;
+    justify-content: center;
+    margin: 0em 1em 0em 1em;
   }
 
   .services {
