--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,18 @@
 body {
   hyphens: manual;
   align-items: center;
+  animation: fadeInAnimation ease 4s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: .2;
+  }
+  100% {
+      opacity: 1;
+   }
 }
 
 .container {
