--- a/styles/main.css
+++ b/styles/main.css
@@ -257,7 +257,7 @@ ul {
   background-size: 100%;
   background-repeat: no-repeat;
   filter: brightness(100%);
-  height: 41.2vh;
+  height: 48vh;
 }
 
 .hero h1 {
@@ -273,8 +273,6 @@ ul {
   color: white;
   font-size: 1.4em;
     text-shadow: 2px 2px #240c0c;
-  
-
 }
 
 /* CTA section START */
@@ -296,6 +294,8 @@ ul {
   -webkit-transition: ease-out 1s;
   -moz-transition: ease-out 1s;
   transition: ease-out 1s;
+  border: 1.5px solid white;
+  outline: 4px solid var(--wood);
 }
 
 .direction-cta:hover {
@@ -313,6 +313,8 @@ ul {
   -webkit-transition: ease-out 1s;
   -moz-transition: ease-out 1s;
   transition: ease-out 1s;
+  border: 1.5px solid white;
+  outline: 4px solid var(--wood);
 }
 
 .appointment-cta:hover {
