--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@
   background-color: var(--primary-color);
   scroll-behavior: smooth;
   scroll-snap-type: x proximity;
+  overflow-y: hidden;
   
 }
 
