--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@
 * {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 
 
 }
@@ -30,7 +31,6 @@ body {
   animation: fadeInAnimation ease 4s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  overflow-x: hidden;
 }
 
 @keyframes fadeInAnimation {
@@ -257,22 +257,25 @@ ul {
 
 .hero {
   text-align: center;
-  background: url("../images/shot11.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0),rgba(0, 0, 0, 0.5)), url("../images/shot11.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
   filter: brightness(100%);
   height: 48vh;
 }
 
+
+
+
 .hero h1 {
   font-size: 2.8em;
-  letter-spacing: -.2em;
+  letter-spacing: -.03em;
   color: white;
-  opacity: 1;
+  opacity: 0;
   text-shadow: var(--primary-color) 1px 1px,var(--primary-color) -0px 0px,var(--primary-color) -1px 1px,var(--primary-color) -2px 2px,var(--primary-color) -3px 3px,var(--primary-color) -4px 4px,var(--primary-color) -5px 5px,var(--primary-color) -6px 6px,var(--primary-color) -7px 7px,var(--primary-color) -8px 8px,var(--primary-color) -9px 9px;
   font-family: 'Lobster', cursive;
   padding-top: 2.1em;
-  animation: fadeInAnimationHero ease 5s;
+  animation: fadeInAnimationHero ease 3.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   
@@ -284,6 +287,7 @@ ul {
   }
   100% {
       opacity: 1;
+      
    }
 }
 
@@ -305,15 +309,15 @@ ul {
   background: linear-gradient(to right, var(--wood), #2c1818, #301818);
   color: white;
   text-decoration: none;
-  padding: .4em 2.74em;
+  padding: .45em 2.84em;
   border-radius: .7em;
   display: inline-block;
-  margin-bottom: 1.9em;
-  -webkit-transition: ease-out 1s;
-  -moz-transition: ease-out 1s;
-  transition: ease-out 1s;
+  -webkit-transition: ease-out .8s;
+  -moz-transition: ease-out .8s;
+  transition: ease-out .8s;
   border: 1.5px solid white;
   outline: 4px solid var(--wood);
+  margin-bottom: 1em;
 }
 
 .direction-cta:hover {
@@ -328,9 +332,9 @@ ul {
   padding: .45em 2.84em;
   border-radius: .7em;
   display: inline-block;
-  -webkit-transition: ease-out 1s;
-  -moz-transition: ease-out 1s;
-  transition: ease-out 1s;
+  -webkit-transition: ease-out 1.4s;
+  -moz-transition: ease-out 1.4s;
+  transition: ease-out 1.4s;
   border: 1.5px solid white;
   outline: 4px solid var(--wood);
 }
@@ -481,10 +485,7 @@ iframe {
 
   .logo-container {
     display: flex;
-
   }
-
-  
 
 }
 
@@ -493,7 +494,12 @@ iframe {
 @media screen and (min-width: 962px) {
   body {
     background-color: white;
+    
   }
+
+* {
+  overflow-x: visible;
+}
 
   .hero {
   display: none;
@@ -505,17 +511,22 @@ iframe {
     font-size: 2.8em;
     padding: 0;
     text-align: left;
+    overflow-x: visible;
+    
+
 
   }
 
   #desk-hero h1 {
     display: flex;
+    overflow-x: visible;
   }
 
   #desk-hero h2 {
     display: flex;
     line-height: 20%;
     margin-bottom: 1rem;
+    overflow-x: visible;
   }
 
   .cta-section {
@@ -529,32 +540,37 @@ iframe {
   }
 
   .direction-cta {
-    font-size: 1.07em;
+    outline: none;
+    margin-bottom: 0em;
+    font-size: 1.1em;
     padding: .29em 1.7em;
     color: white;
+    background: var(--wood);
     border: solid;
     border-color: var(--wood);
-    background: var(--wood);
-    outline: none;
+    box-shadow: none;
+    
   }
 
   .direction-cta:hover {
-    box-shadow: inset 400px 0 0 0 white;
-    color: var(----wood);
+    box-shadow: inset 165px 0 1px 0px white;
+    color: var(--wood);
   }
 
   .appointment-cta {
+    outline: none;
     font-size: 1em;
     padding: .4em 1.7em;
     color: var(--wood);
     background: white;
     border: solid;
     border-color: var(--wood);
-    outline: none;
+    box-shadow: none;
+    
   }
 
   .appointment-cta:hover {
-    box-shadow: inset 400px 0 0 0 var(--wood);
+    box-shadow: inset 100px 0 0 165px var(--wood);
     color: white;
   }
 
